--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@
 steps:
   # build & push the container image
 - name: "gcr.io/kaniko-project/executor:latest"
-  args: ["--cache=true", "--cache-ttl=48h", "--destination=gcr.io/btcoffee-2a6bb/todo:latest"]
+  args: ["--cache=true", "--cache-ttl=48h", "--destination=gcr.io/lucky-lead-289811/todo:latest"]
   # Deploy container image to Cloud Run
 - name: "gcr.io/cloud-builders/gcloud"
-  args: ['beta', 'run', 'deploy', 'todo', '--image', 'gcr.io/btcoffee-2a6bb/todo:latest', '--region', 'us-central1', '--allow-unauthenticated', '--platform', 'managed']
+  args: ['beta', 'run', 'deploy', 'todo', '--image', 'gcr.io/lucky-lead-289811/todo:latest', '--region', 'us-central1', '--allow-unauthenticated', '--platform', 'managed']
